--- a/source/_posts/Ids-101.md
+++ b/source/_posts/Ids-101.md
@@ -1,5 +1,5 @@
 ---
-title: Ids in table design
+title: 怎么挑选合适的主键
 tags:
   - backend
   - database
@@ -7,4 +7,25 @@ abbrlink: b72db3c8
 date: 2022-10-14 11:01:39
 ---
 
+设计数据实体时, 挑选合适的主键会影响后续开发和系统升级的难易程度.
 
+在实际设计之前，我们需要知道
+1. 业界常用的设计
+2. 设计适用的场景
+
+第一个问题
+
+
+
+### Factors
+1. Standalone vs Distributed
+2. Natural vs Surrogate
+3. 
+
+Natural key vs Surrogate key
+
+Stand
+
+Principles in
+
+Primary key needs to be unique and unrelated to the business in real world
