--- a/source/_posts/Ids-101.md
+++ b/source/_posts/Ids-101.md
@@ -15,17 +15,20 @@ date: 2022-10-14 11:01:39
 
 第一个问题
 
+我们应该使用代理键(Surrogate)还是自然键(Natural)?
+
+代理键由系统生成 并且和业务字段没有联系，例如一个由数据库生成的UUID
+
+自然键则刚好相反，是基于存在的业务字段生成或直接使用的键，例如用户的身份证ID
+
+代理键的优点
 
 
-### Factors
-1. Standalone vs Distributed
-2. Natural vs Surrogate
-3. 
+自然键的优点
 
-Natural key vs Surrogate key
 
-Stand
 
-Principles in
 
-Primary key needs to be unique and unrelated to the business in real world
+数据类型和大小
+
+
